more refactoring on redis