@@ -13,6 +13,7 @@ import java.util.List;
 import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.stream.Collectors;
 
 @Getter
 @Setter
@@ -23,7 +24,7 @@ public class ServerManager extends Manager implements IServerManager {
     @Override
     public boolean isOnline(GlobalPlayer player) {
         return getConnectedServers().stream().filter(serverData ->
-                serverData.getNames().stream().map(String::toLowerCase).toList()
+                serverData.getNames().stream().map(String::toLowerCase).collect(Collectors.toList())
                         .contains(player.getName().toLowerCase())).findFirst().orElse(null) != null;
     }
 
@@ -82,6 +83,7 @@ public class ServerManager extends Manager implements IServerManager {
         return r;
     }
 
+    @Override
     public boolean isPlayerOnline(UUID uuid) {
         boolean r = false;
         for (GlobalPlayer globalPlayer : getGlobalPlayers()) {
